--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,5 +1,5 @@
 {{#if user}}
-<h1>Bienvenido {{user.first_name}}</h1>
+<h1>Bienvenido</h1>
 {{/if}}
 
     <h2>LISTA DE PRODUCTOS</h2>
@@ -14,7 +14,6 @@
                     <p><span>Codigo: </span>{{code}}</p>
                     <p><span>Stock:</span> {{stock}}</p>
                     <p><span>Categoria:</span> {{category}}</p>
-                    <button onclick="addToCart('{{code}}')">Agregar al Carrito</button>
                 </ul>
             {{/each}}
         {{else}}
