--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -26,7 +26,7 @@
 
 <script>
         function redirect() {
-            window.location.href = "http://localhost:8080/register-github";
+            window.location.href = "https://entregafinal-backend-coder-production.up.railway.app/register-github";
         }
 </script>
 
